--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div id="navflex">
         <li><a href="#phakkimda" class="navbar">Hakkimda</a></li>
         <li><a href="#planss" class="navbar">Planlar</a></li>
-        <li><a href="" class="navbar">Iletisim</a></li>
+        <li><a href="#iletisim" class="navbar">Iletisim</a></li>
         </div>
    </ul>
    <section></section>
@@ -62,7 +62,7 @@
                 <br>
             </div>
         </div>
-        <div class="plancontainertwo">   
+        <div class="plancontainerthree">   
             <div class="centered">
                 <br><br><br><span class="plan1">12 AY PAKET</span>
                 <br><br>
@@ -72,9 +72,17 @@
         </div>
    </div>
 
-   <div class="iletisim">
+   <div id="iletisim">
+        <div id="iletisimchild">
+            <p style="font-family: Oswald;font-size: xx-large;color: white;">İLETİSİM</p>
+            <img src="src/images/Instagram_icon.png" alt="insta">
+            <br><a href="https://www.instagram.com/taha_arslan36" class="link">@taha_arslan36</a><br>
+            <img src="src/images/WhatsApp_icon.png" alt="wp" style="margin-top: 8rem;">
+            <br><a href="" class="link">+90 533 120 46 36</a><br>
+            
 
 
+        </div>
    </div>
 
 </body>
